Swagger updated and Retrieve all categories api done
