# Backend/playstation/applications/products/app.py
@@ -78,19 +78,9 @@ url_prefix: str = "/api/products"
 # Blueprint
 products_api: Blueprint = Blueprint("products_api", __name__, url_prefix=url_prefix)
 
-# Test API
-@products_api.route("", methods=["GET"])
-def products_test() -> str:
-    """
-    Check products API
-
-    Returns:
-        str: Message indicating the API is working.
-    """
-    return "Products API is working!"
 
 # API to Create product category
-@products_api.route("/category", methods=['POST'])
+@products_api.route("/category", methods=["POST"])
 @authentication_classess([JWTAuthentication])
 @permission_required([IsAdmin])
 def create_category(*args, **kwargs) -> Response:
@@ -99,32 +89,47 @@ def create_category(*args, **kwargs) -> Response:
 
     Returns:
         Response: A success message with status 200.
+
+    Error Codes:
+        - 400: Bad Request - If the input data is invalid.
+        - 401: Unauthorized - If the user is not authenticated.
+        - 403: Forbidden - If the user does not have the required permissions.
     """
-    # Get the request data
-    data = request.get_json()
-    return make_response("Product Categories", 200)
+    try:
+        # Get the request data
+        data = request.get_json()
+        # Here should be the logic to create a category
+        return make_response("Product Categories", 200)
+    except Exception as e:
+        error: str = str(e)
+        logger.error(error)
+        return make_response("Failed to create product category", 400)
+
 
 # API to Grab all product categories
-@products_api.route("/categories", methods=['GET'])
+@products_api.route("/categories", methods=["GET"])
 def get_categories(*args, **kwargs) -> Response:
     """
     Get all product categories
 
     Returns:
         Response: A list of all product categories with status 200.
+
+    Error Codes:
+        - 404: Not Found - If no categories are found.
     """
     try:
         # Get all categories
         categories = CategorySerializer.get_all_categories()
         return make_response(categories, 200)
     except Exception as e:
-        # Add error message to a logger class to track bugs
         error: str = str(e)
         logger.error(error)
         return make_response("Failed to grab product categories", 404)
 
+
 # API to Update a product category
-@products_api.route("/category/<int:category_id>", methods=['PUT'])
+@products_api.route("/category/<int:category_id>", methods=["PUT"])
 @authentication_classess([JWTAuthentication])
 @permission_required([IsAdmin])
 def update_category(category_id: int, *args, **kwargs) -> Response:
@@ -136,11 +141,24 @@ def update_category(category_id: int, *args, **kwargs) -> Response:
 
     Returns:
         Response: A success message with status 200.
+
+    Error Codes:
+        - 400: Bad Request - If the input data is invalid.
+        - 401: Unauthorized - If the user is not authenticated.
+        - 403: Forbidden - If the user does not have the required permissions.
+        - 404: Not Found - If the category is not found.
     """
-    return make_response("Product Categories", 200)
+    try:
+        # Logic to update category
+        return make_response("Product Categories", 200)
+    except Exception as e:
+        error: str = str(e)
+        logger.error(error)
+        return make_response("Failed to update product category", 400)
+
 
 # API to Delete a product category
-@products_api.route("/category/<int:category_id>", methods=['DELETE'])
+@products_api.route("/category/<int:category_id>", methods=["DELETE"])
 @authentication_classess([JWTAuthentication])
 @permission_required([IsAdmin])
 def delete_category(category_id: int, *args, **kwargs) -> Response:
@@ -152,11 +170,23 @@ def delete_category(category_id: int, *args, **kwargs) -> Response:
 
     Returns:
         Response: A success message with status 200.
+
+    Error Codes:
+        - 401: Unauthorized - If the user is not authenticated.
+        - 403: Forbidden - If the user does not have the required permissions.
+        - 404: Not Found - If the category is not found.
     """
-    return make_response("Product Categories", 200)
+    try:
+        # Logic to delete category
+        return make_response("Product Categories", 200)
+    except Exception as e:
+        error: str = str(e)
+        logger.error(error)
+        return make_response("Failed to delete product category", 404)
+
 
 # API to create new product
-@products_api.route("", methods=['POST'])
+@products_api.route("", methods=["POST"])
 @authentication_classess([JWTAuthentication])
 @permission_required([IsAdmin])
 def create_product(*args, **kwargs) -> Response:
@@ -165,31 +195,62 @@ def create_product(*args, **kwargs) -> Response:
 
     Returns:
         Response: A success message with status 201.
+
+    Error Codes:
+        - 400: Bad Request - If the input data is invalid.
+        - 401: Unauthorized - If the user is not authenticated.
+        - 403: Forbidden - If the user does not have the required permissions.
     """
-    return make_response("Product Created", 201)
+    try:
+        # Logic to create product
+        return make_response("Product Created", 201)
+    except Exception as e:
+        error: str = str(e)
+        logger.error(error)
+        return make_response("Failed to create product", 400)
+
 
 # API to grab all products
-@products_api.route("", methods=['GET'])
+@products_api.route("", methods=["GET"])
 def get_all_products(*args, **kwargs) -> Response:
     """
     Get all products
 
     Returns:
         Response: A list of all products with status 200.
+
+    Query Parameters:
+        - category (str, optional): Filter products by category.
+        - search (str, optional): Search products by name or description.
+        - sort_by (str, optional): Sort products by specified field (e.g., price, name).
+        - start (int, optional): Specify the page number for pagination.
+        - products (int, optional): Specify the number of products per page for pagination.
+        - low_price (int, optional): Specify the lowest price for product.
+        - high_price (int, optional): Specify the highest price for the product.
+
+    Error Codes:
+        - 404: Not Found - If no products are found.
     """
     queries: dict = {
-        "category": request.args.get("category", None), # Category Id
-        "search": request.args.get("search", None), # Word to search for in name of product or in description
-        "sort_by": request.args.get("sort_by", None), # Sort by certain attribute
-        "start": request.args.get("start", 0), # point of the start of products
-        "products": request.args.get("products", 10), # How many products to retrieve from start point
-        "low_price": request.args.get("low_price", None), # Lowest price point
-        "high_price": request.args.get("high_price", None), # highest price point
+        "category": request.args.get("category", None),  # Category Id
+        "search": request.args.get("search", None),  # Word to search for in name of product or in description
+        "sort_by": request.args.get("sort_by", None),  # Sort by certain attribute
+        "start": request.args.get("start", 0),  # point of the start of products
+        "products": request.args.get("products", 10),  # How many products to retrieve from start point
+        "low_price": request.args.get("low_price", None),  # Lowest price point
+        "high_price": request.args.get("high_price", None),  # highest price point
     }
-    return make_response("Products", 200)
+    try:
+        # Logic to get all products
+        return make_response("Products", 200)
+    except Exception as e:
+        error: str = str(e)
+        logger.error(error)
+        return make_response("Failed to retrieve products", 404)
+
 
 # API to update a product
-@products_api.route("/<int:product_id>", methods=['PUT'])
+@products_api.route("/<int:product_id>", methods=["PUT"])
 @authentication_classess([JWTAuthentication])
 @permission_required([IsAdmin])
 def update_product(product_id: int, *args, **kwargs) -> Response:
@@ -201,11 +262,24 @@ def update_product(product_id: int, *args, **kwargs) -> Response:
 
     Returns:
         Response: A success message with status 200.
+
+    Error Codes:
+        - 400: Bad Request - If the input data is invalid.
+        - 401: Unauthorized - If the user is not authenticated.
+        - 403: Forbidden - If the user does not have the required permissions.
+        - 404: Not Found - If the product is not found.
     """
-    return make_response("Product Updated", 200)
+    try:
+        # Logic to update product
+        return make_response("Product Updated", 200)
+    except Exception as e:
+        error: str = str(e)
+        logger.error(error)
+        return make_response("Failed to update product", 400)
+
 
 # API to delete a product
-@products_api.route("/<int:product_id>", methods=['DELETE'])
+@products_api.route("/<int:product_id>", methods=["DELETE"])
 @authentication_classess([JWTAuthentication])
 @permission_required([IsAdmin])
 def delete_product(product_id: int, *args, **kwargs) -> Response:
@@ -217,5 +291,16 @@ def delete_product(product_id: int, *args, **kwargs) -> Response:
 
     Returns:
         Response: A success message with status 200.
+
+    Error Codes:
+        - 401: Unauthorized - If the user is not authenticated.
+        - 403: Forbidden - If the user does not have the required permissions.
+        - 404: Not Found - If the product is not found.
     """
-    return make_response("Product Deleted", 200)
+    try:
+        # Logic to delete product
+        return make_response("Product Deleted", 200)
+    except Exception as e:
+        error: str = str(e)
+        logger.error(error)
+        return make_response("Failed to delete product", 404)
